@@ -1086,19 +1086,21 @@ BEGIN
     PUSHBUTTON      "Find Next",IDC_MEMVIEWFIND_NEXT,225,7,50,14
 END
 
-IDD_RECORDINP DIALOGEX 0, 0, 276, 65
+IDD_RECORDINP DIALOGEX 0, 0, 276, 86
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Record input"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",1,168,47,50,14
-    GROUPBOX        "",65501,3,0,269,43
-    RTEXT           "File:",65500,28,12,24,10,SS_CENTERIMAGE | NOT WS_GROUP
-    PUSHBUTTON      "Cancel",2,222,47,50,14
+    DEFPUSHBUTTON   "OK",1,167,66,50,14
+    GROUPBOX        "",65501,3,0,269,60
+    RTEXT           "File:",65500,28,11,24,10,SS_CENTERIMAGE | NOT WS_GROUP,WS_EX_RIGHT
+    PUSHBUTTON      "Cancel",2,221,66,50,14
     EDITTEXT        IDC_EDIT_FILENAME,55,10,189,12,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BUTTON_BROWSEFILE,249,10,18,14
     COMBOBOX        IDC_COMBO_RECORDFROM,55,25,189,154,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Record From:",65498,9,27,43,8
+    RTEXT           "Record From:",65498,9,27,43,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_AUTHOR,55,41,189,14,ES_AUTOHSCROLL
+    RTEXT           "Author:",65502,18,43,34,10,SS_CENTERIMAGE | NOT WS_GROUP,WS_EX_RIGHT
 END
 
 IDD_REPLAYINP DIALOGEX 0, 0, 300, 164
@@ -1415,6 +1417,11 @@ BEGIN
         RIGHTMARGIN, 275
         TOPMARGIN, 7
         BOTTOMMARGIN, 74
+    END
+
+    "IDD_RECORDINP", DIALOG
+    BEGIN
+        BOTTOMMARGIN, 66
     END
 
     "IDD_REPLAYINP", DIALOG
